# trnsys-odbc

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
db_template/: ms-excel.xlsx
src/: lib.rs  parameter.rs  trnsys_type.rs
src/database/: buffer.rs  column.rs  cursor.rs  datatype.rs  dialect.rs  mod.rs  ms_access.rs  ms_excel.rs  odbc.rs  path.rs  postgres.rs  sqlite.rs  template.rs
src/trnsys/: error.rs  ext_c.rs  iteration_mode.rs  logging.rs  mod.rs  param.rs  state.rs  util.rs
