[package]
name = "trnsys_odbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.trnsys]
type_number = 256

[package.metadata.winres]
FileDescription = "https://github.com/JunfXiao/trnsys-odbc"
LegalCopyright = "Copyright © 2024 Junfeng Xiao"

[lib]
name = "trnsys_odbc"
path = "src/lib.rs"
edition = "2021"
crate-type = ["cdylib"]


[dependencies]
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.19", features = ["serde", "tracing-serde", "env-filter", "time", "local-time"] }
thiserror = "2.0.9"
odbc-api = "10.0.0"
strum = "0.26.3"
strum_macros = "0.26.3"
include_dir = "0.7.4"
indexmap = "2.7.0"
path-clean = "1.0.1"

[build-dependencies]
toml = "0.8"
winres = "0.1.12"

[dev-dependencies]
tracing-test = "0.2.5"
